Incluir Game Over y Logo inicial

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <canvas id="gameCanvas"></canvas>
     <img hidden id='bricks' src="img/bricks.png" alt='Arkanoid Bricks Sprite'>
     <img hidden id='sprite' src="img/sprite.png" alt="Arkanoid Sprite">
+    <img id='logo' src="img/logo.png" alt="Arkanoid Logo">
+    <img id='gameOver' src="img/gameOver.png" alt="Game Over">
     <script src="js/ball.js"></script>
     <script src="js/bricks.js"></script>
     <script src="js/paddle.js"></script>
