--- a/index.html
+++ b/index.html
@@ -9,24 +9,39 @@
 
 <body>
     <div id="container">
-    <canvas id="gameCanvas"></canvas>
-    <div id="button-container">
-        <button id="options" class="button">Options</button>
-        <button id="start" class="button">Start</button>
-        <button id="stop" class="button">Stop</button>
+        <canvas id="gameCanvas"></canvas>
+        <div id="button-container">
+            <button id="options" class="button">Options</button>
+            <button id="start" class="button">Start</button>
+            <button id="stop" class="button">Stop</button>
+        </div>
     </div>
-    </div>
+
 
     <img hidden id='bricks' src="img/bricks.png" alt='Arkanoid Bricks Sprite'>
     <img hidden id='sprite' src="img/sprite.png" alt="Arkanoid Sprite">
     <img id='logo' src="img/logo.png" alt="Arkanoid Logo">
     <img id='gameOver' src="img/gameOver.png" alt="Game Over">
-   
+
+    
+    <div id="option-container">
+        di
+        <label for="sensitivity-slider">Sensibilidad:</label>
+        <input type="range" id="sensitivity-slider" min="1" max="10" value="5">
+
+        <div id="dificult-container">
+            <button id="easy" class="dificult-button"> Easy </button>
+            <button id="medium" class="dificult-button"> Medium </button>
+            <button id="hard" class="dificult-button"> Hard </button>
+        </div>
+    </div>
+
     <script src="js/ball.js"></script>
     <script src="js/bricks.js"></script>
     <script src="js/paddle.js"></script>
     <script src="js/game.js"> </script>
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
