--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         </div>
     </div>
 
+    <audio id="game-music"> 
+        <source src="music/05 Ending.mp3" type="audio/mpeg"> 
+    </audio>
+    
+    <audio id="gameover-music"> 
+        <source src="music/06 Game Over.mp3" type="audio/mpeg"> 
+    </audio>
+
     <script src="js/ball.js"></script>
     <script src="js/bricks.js"></script>
     <script src="js/paddle.js"></script>
